<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginStart="@dimen/top_bar_left_margin"
        android:layout_marginEnd="@dimen/top_bar_right_margin">
        <com.program.moist.widget.IconFontTextView
            android:id="@+id/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/ic_close" />
        <com.program.moist.widget.IconFontTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/register_to_login"
            android:text="@string/login"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/input_margin_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/view_left_padding"
        android:paddingEnd="@dimen/view_right_padding">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:hint="@string/hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_left_padding"
                android:layout_marginEnd="@dimen/view_right_padding"
                android:background="@drawable/input_selector"
                android:layout_marginTop="@dimen/input_margin_top"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_validate_code"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <!--<View
            style="@style/line_style"/>-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/validate_code"
            android:layout_marginStart="@dimen/view_left_padding"
            android:layout_marginEnd="@dimen/view_right_padding"
            android:background="@drawable/input_selector"
            android:layout_marginTop="@dimen/input_margin_top"
            android:layout_marginBottom="@dimen/input_margin_bottom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="@dimen/view_left_padding"
            android:layout_marginEnd="@dimen/view_right_padding"
            android:background="@drawable/input_selector"
            android:layout_marginTop="@dimen/input_margin_top"
            android:layout_marginBottom="@dimen/input_margin_bottom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="@dimen/font_biggest"
            android:layout_marginStart="@dimen/view_left_padding"
            android:layout_marginEnd="@dimen/view_right_padding"
            android:layout_marginTop="@dimen/input_margin_top"
            android:layout_marginBottom="@dimen/input_margin_bottom"/>

    </LinearLayout>



</LinearLayout>