<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_marginStart="@dimen/top_bar_left_margin"
        android:layout_marginEnd="@dimen/top_bar_right_margin">
        <com.program.moist.widget.IconFontTextView
            android:id="@+id/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:text="@string/ic_close" />
        <com.program.moist.widget.IconFontTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:id="@+id/login_to_register"
            android:text="@string/register"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="@dimen/input_margin_top"
        android:layout_marginBottom="@dimen/input_margin_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/view_left_padding"
        android:paddingEnd="@dimen/view_right_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="手机号/邮箱"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_medium"
                android:id="@+id/login_account"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--<View
            style="@style/line_style"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="密码"
            app:endIconMode="password_toggle"
            android:id="@+id/login_password_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_medium"
                android:id="@+id/login_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/font_biggest"
            android:layout_marginStart="@dimen/view_left_padding"
            android:layout_marginEnd="@dimen/view_right_padding"
            android:layout_marginTop="@dimen/input_margin_top"
            android:layout_marginBottom="@dimen/input_margin_bottom"
            android:background="@color/orange"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/view_right_padding"
            android:layout_marginTop="@dimen/input_margin_top"/>
    </LinearLayout>



</LinearLayout>