<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UserFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/background_image_height">

                <ImageView
                    android:layout_width="wrap_content"
                    android:id="@+id/user_background"
                    android:layout_height="@dimen/background_image_height"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/background_default"/>

                <RelativeLayout
                    android:layout_width="@dimen/avatar_length"
                    android:layout_height="@dimen/avatar_length"
                    android:layout_centerInParent="true">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/user_avatar"
                        android:layout_width="@dimen/avatar_length"
                        android:layout_height="@dimen/avatar_length"
                        app:strokeWidth="@dimen/avatar_stroke"
                        app:strokeColor="@color/white"
                        app:shapeAppearanceOverlay="@style/roundImageShape"
                        android:padding="@dimen/avatar_padding"
                        android:scaleType="fitXY"
                        android:src="@mipmap/avatar_default"/>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/user_avatar_badge"
                        android:layout_width="@dimen/avatar_badge"
                        android:layout_height="@dimen/avatar_badge"
                        android:background="@drawable/avatar_badge"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_camera_add"
                        android:scaleType="centerInside"
                        android:layout_marginEnd="1.5dp"
                        android:layout_marginBottom="1dp"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/user_name"
                    android:text="@string/me"
                    android:textAppearance="?attr/textAppearanceHeadline4"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/view_left_padding"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin_top"

                    android:background="@color/background_white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white_2"
                            android:padding="10dp"
                            android:text="生活"
                            android:textAppearance="?attr/textAppearanceSubtitle1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/user_info">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_home_2"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/release"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/user_fav">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_half_heart"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/fav"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_substract"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sub"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_penandruller"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/writing"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
                <View
                    style="@style/divide_style"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/input_margin_top"
                    android:layout_height="wrap_content"
                    android:background="@color/background_white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white_2"
                            android:padding="10dp"
                            android:text="兴趣"
                            android:textAppearance="?attr/textAppearanceSubtitle1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/user_post">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_book_open"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/post"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:id="@+id/user_follow">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_add_user"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/follow"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_chat4"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/interactive"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="@dimen/icon_big"
                                    android:layout_height="@dimen/icon_big"
                                    android:src="@drawable/ic_send"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/comment"
                                    android:textSize="@dimen/font_small" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>